feat: restructure & add generate token
