# cmd/api/main.go
@@ -18,25 +18,15 @@ const (
 
 var appConfig *config.Config
 
-// @title           Swagger Example API
+// @title           Example Rest API
 // @version         1.0
 // @description     This is a sample server celler server.
-// @termsOfService  http://swagger.io/terms/
-
-// @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
-
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host      localhost:7000
 // @BasePath  /api/v1
 
 // @securityDefinitions.basic  BasicAuth
 
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
 func main() {
 	// Initialize configuration
 	appConfig, err := config.LoadConfig()
